--- a/paginaVideos.html
+++ b/paginaVideos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link ref="stylesheet" href: "/home/anskar/Escritorio/videos/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,7 +10,10 @@
 </head>
 
 <body>
-
+    <h1>Mejores videos</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/07GZIRVBrxg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rGiHkWVhles" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/vYe6XEhIYEk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </body>
 
 </html>
