top mejores tres videos estatico

--- a/paginaVideos.html
+++ b/paginaVideos.html
@@ -12,8 +12,11 @@
 <body>
     <h1>Mejores videos</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/07GZIRVBrxg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <h3>Top1</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rGiHkWVhles" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <h3>top2</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/vYe6XEhIYEk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <h3>top3</h3>
 </body>
 
 </html>
